--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.24.0",
     "concurrently": "^6.4.0"
   },
   "devDependencies": {},
