--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.15",
-    "sass": "^1.43.4"
+    "sass": "^1.43.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {},
   "description": ""
