--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "Set": "^0.4.1",
     "axios": "^0.24.0",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
     "sass": "^1.43.4",
     "web-vitals": "^1.1.2"
   },
